fixes home extra margin

--- a/app/home/home.scss
+++ b/app/home/home.scss
@@ -1,5 +1,6 @@
 .home {
   padding: 0;
+  margin: 0;
 
   li {
     list-style-type: none;
